RESOLVED FIXED144634
FTL SwitchString slow case creates duplicate switch cases
https://bugs.webkit.org/show_bug.cgi?id=144634
Summary FTL SwitchString slow case creates duplicate switch cases
Filip Pizlo
Reported 2015-05-05 13:14:49 PDT
Patch forthcoming.
Attachments
the patch (8.82 KB, patch)
2015-05-05 13:27 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2015-05-05 13:27:18 PDT
Created attachment 252399 [details] the patch
WebKit Commit Bot
Comment 2 2015-05-05 13:29:21 PDT
Attachment 252399 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/tests/stress/ftl-switch-string-slow-duplicate-cases.js:7: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2015-05-05 13:40:11 PDT
Comment on attachment 252399 [details] the patch r=me
Filip Pizlo
Comment 4 2015-05-05 13:44:26 PDT
Note You need to log in before you can comment on or make changes to this bug.